--- a/advanced-css-course-master/Nexter/starter/package.json
+++ b/advanced-css-course-master/Nexter/starter/package.json
@@ -19,6 +19,8 @@
     "concat": "^1.0.3",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
-    "postcss-cli": "^4.1.1"
-  }
+    "postcss": "^8.2.13",
+    "postcss-cli": "^8.3.1"
+  },
+  "dependencies": {}
 }
