--- a/homepage/package.json
+++ b/homepage/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass website01/sass/style.scss website01/style.css -w"
+    "watch:sass": "node-sass component/tip-calculator-app-main/styles/main.scss component/tip-calculator-app-main/styles/main.css -w"
   },
   "keywords": [],
   "author": "",
